# webiz

./: README.md
.github/workflows/: dockerize.yaml  terraform.yaml
terraform/: .gitignore
terraform/modules/aws/: input.tf  main.tf
terraform/modules/aws/ec2/: aws_ec2.tf  main.tf  variables.tf
terraform/modules/aws/secrets/: main.tf  variables.tf
terraform/stg/: ec2_variables.tf  entrypoint.sh  main.tf
webiz-app/: .gitignore  Dockerfile  README.md  data.json  pyproject.toml  run.py  uwsgi.ini
