[tool.poetry]
name = "webiz-app"
version = "0.1.0"
description = ""
authors = ["Akaki Ivanishvili <akoivanishvili6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^4.0.0"
uwsgi = "^2.0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
